--- a/ივენთების შექმნა/parent.html
+++ b/ივენთების შექმნა/parent.html
@@ -99,7 +99,7 @@
         <section class="w-full flex flex-wrap gap-[25px]">
           <!-- post-parents -->
           <article
-            class="w-full lg:odd:w-[calc(50%-25px)] lg:even:w-[calc(50%)] bg-white shadow-[0_12px_24px_-4px] shadow-[#919EAB1F] flex p-[24px]"
+            class="w-full lg:w-[calc(50%-12.5px)] bg-white shadow-[0_12px_24px_-4px] shadow-[#919EAB1F] flex p-[24px]"
           >
             <div class="flex flex-col gap-[16px]">
               <div class="flex justify-between text-[12px]">
@@ -131,7 +131,7 @@
           <!-- post -->
           <!-- post-parents -->
           <article
-            class="w-full lg:odd:w-[calc(50%-25px)] lg:even:w-[calc(50%)] bg-white shadow-[0_12px_24px_-4px] shadow-[#919EAB1F] flex p-[24px]"
+            class="w-full lg:w-[calc(50%-12.5px)] bg-white shadow-[0_12px_24px_-4px] shadow-[#919EAB1F] flex p-[24px]"
           >
             <div class="flex flex-col gap-[16px]">
               <div class="flex justify-between text-[12px]">
@@ -163,7 +163,7 @@
           <!-- post -->
           <!-- post-parents -->
           <article
-            class="w-full lg:odd:w-[calc(50%-25px)] lg:even:w-[calc(50%)] bg-white shadow-[0_12px_24px_-4px] shadow-[#919EAB1F] flex p-[24px]"
+            class="w-full lg:w-[calc(50%-12.5px)] bg-white shadow-[0_12px_24px_-4px] shadow-[#919EAB1F] flex p-[24px]"
           >
             <div class="flex flex-col gap-[16px]">
               <div class="flex justify-between text-[12px]">
@@ -195,7 +195,7 @@
           <!-- post -->
           <!-- post-parents -->
           <article
-            class="w-full lg:odd:w-[calc(50%-25px)] lg:even:w-[calc(50%)] bg-white shadow-[0_12px_24px_-4px] shadow-[#919EAB1F] flex p-[24px]"
+            class="w-full lg:w-[calc(50%-12.5px)] bg-white shadow-[0_12px_24px_-4px] shadow-[#919EAB1F] flex p-[24px]"
           >
             <div class="flex flex-col gap-[16px]">
               <div class="flex justify-between text-[12px]">
